force-app/main/default/objects/UPP_NotificationTemplate__c/UPP_NotificationTemplate__c.object-meta.xml
<CustomObject>
    <label>UPP Notification Template</label>
    <nameField>
        <label>UPP_NotificationTemplate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UPP Notification Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>