force-app/main/default/objects/UPP_NotificationTemplate__c/fields/Agreement_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Sub_Type__c</fullName>
    <label>Notification Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Agreement_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Rewards</fullName>
            </value>
            <value>
                <fullName>Leads</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Workbelt</fullName>
            </value>
            <value>
                <fullName>Company Wide</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>