force-app/main/default/objects/UPP_NotificationTemplate__c/fields/Agreement_Text__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Text__c</fullName>
    <label>Notification Text</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>