force-app/main/default/objects/UPP_NotificationTemplate__c/fields/days_users_can_bypass_new_agreement_pag__c.field-meta.xml
<CustomField>
    <fullName>days_users_can_bypass_new_agreement_pag__c</fullName>
    <label>Number of days before forced to sign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>