force-app/main/default/objects/UPP_NotificationTemplate__c/fields/Document_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Template_Name__c</fullName>
    <label>Document Template Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Com_NEW</fullName>
            </value>
            <value>
                <fullName>Res_NEW</fullName>
            </value>
            <value>
                <fullName>Com_Up_Down_AsIs</fullName>
            </value>
            <value>
                <fullName>Res_Up_Down_AsIs</fullName>
            </value>
            <value>
                <fullName>Res_Signature</fullName>
            </value>
            <value>
                <fullName>Com_Signature</fullName>
            </value>
            <value>
                <fullName>New_Comm_Certs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>