force-app/main/default/objects/UPP_NotificationTemplate__c/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <label>Document Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>