force-app/main/default/objects/UPP_NotificationTemplate__c/fields/FileName__c.field-meta.xml
<CustomField>
    <fullName>FileName__c</fullName>
    <label>File Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>