force-app/main/default/objects/UPP_NotificationTemplate__c/fields/First_Notification_Days__c.field-meta.xml
<CustomField>
    <fullName>First_Notification_Days__c</fullName>
    <label>First Receive Reminder Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>