force-app/main/default/objects/UPP_NotificationTemplate__c/fields/GraceEndMessage__c.field-meta.xml
<CustomField>
    <fullName>GraceEndMessage__c</fullName>
    <label>Grace End Message</label>
    <length>250</length>
    <type>Text</type>
</CustomField>