force-app/main/default/objects/UPP_NotificationTemplate__c/fields/HeaderTop__c.field-meta.xml
<CustomField>
    <fullName>HeaderTop__c</fullName>
    <label>Header Top</label>
    <length>50</length>
    <type>Text</type>
</CustomField>