force-app/main/default/objects/UPP_NotificationTemplate__c/fields/Include_Signature_Field__c.field-meta.xml
<CustomField>
    <fullName>Include_Signature_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Signature Field ?</label>
    <type>Checkbox</type>
</CustomField>