force-app/main/default/objects/UPP_NotificationTemplate__c/fields/InformativeMessage__c.field-meta.xml
<CustomField>
    <fullName>InformativeMessage__c</fullName>
    <label>Informative Message</label>
    <length>100</length>
    <type>Text</type>
</CustomField>