force-app/main/default/objects/UPP_NotificationTemplate__c/fields/InitialStatusDocument__c.field-meta.xml
<CustomField>
    <fullName>InitialStatusDocument__c</fullName>
    <label>Initial Status Document</label>
    <length>50</length>
    <type>Text</type>
</CustomField>