force-app/main/default/objects/UPP_NotificationTemplate__c/fields/LabelCheckbox__c.field-meta.xml
<CustomField>
    <fullName>LabelCheckbox__c</fullName>
    <label>Label Checkbox</label>
    <length>250</length>
    <type>Text</type>
</CustomField>