force-app/main/default/objects/UPP_NotificationTemplate__c/fields/ReasonNotification__c.field-meta.xml
<CustomField>
    <fullName>ReasonNotification__c</fullName>
    <label>Reason Notification</label>
    <length>250</length>
    <type>Text</type>
</CustomField>