force-app/main/default/objects/UPP_NotificationTemplate__c/fields/Second_Notification_Days__c.field-meta.xml
<CustomField>
    <fullName>Second_Notification_Days__c</fullName>
    <label>Second Receive Reminder Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>