force-app/main/default/objects/UPP_NotificationTemplate__c/fields/SubmitMessage__c.field-meta.xml
<CustomField>
    <fullName>SubmitMessage__c</fullName>
    <label>Submit Message</label>
    <length>250</length>
    <type>Text</type>
</CustomField>