force-app/main/default/objects/UPP_NotificationTemplate__c/fields/Target_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Target_Accounts__c</fullName>
    <label>Target Accounts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Selected Accounts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>