force-app/main/default/objects/UPP_NotificationTemplate__c/fields/User_Roles__c.field-meta.xml
<CustomField>
    <fullName>User_Roles__c</fullName>
    <label>User Roles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UPP_Manage_users_permissions_and_program_enrollment</fullName>
                <label>Add, manage, and remove users, permissions, and services</label>
            </value>
            <value>
                <fullName>All users</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>