force-app/main/default/objects/UPP_NotificationTemplate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>